src/objects/Card__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cards</relationshipLabel>
        <relationshipName>Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_County_State__c</fullName>
        <label>Billing County/State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Post_Code__c</fullName>
        <label>Billing Post Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Card_Currency__c</fullName>
        <label>Card Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GBP</fullName>
                    <default>true</default>
                    <label>GBP</label>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Name__c</fullName>
        <label>Card Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number_Encrypted__c</fullName>
        <label>Card Number Encrypted</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa Debit</fullName>
                </value>
                <value>
                    <fullName>Electron</fullName>
                </value>
                <value>
                    <fullName>Maestro</fullName>
                </value>
                <value>
                    <fullName>MasterCard Debit</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cards</relationshipLabel>
        <relationshipName>Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiry_Date_Encrypted__c</fullName>
        <label>Expiry Date (Encrypted)</label>
        <length>7</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Expiry_Month__c</fullName>
        <label>Expiry Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_Year_Text__c</fullName>
        <label>Expiry Year Text</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Year__c</fullName>
        <label>Expiry Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Number__c</fullName>
        <label>Issue Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security_Code_Encrypted__c</fullName>
        <label>Security Code (Encrypted)</label>
        <length>4</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Security_Code__c</fullName>
        <label>Security Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Encrypted__c</fullName>
        <label>Token (Encrypted)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From_Month__c</fullName>
        <label>Valid From Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_From_Year_Text__c</fullName>
        <label>Valid From Year Text</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From_Year__c</fullName>
        <label>Valid From Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Card Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>